CSVからデータを読んで配置する

--- a/Plugins/UnityPlugins/UnityPlugins.vcxproj
+++ b/Plugins/UnityPlugins/UnityPlugins.vcxproj
@@ -135,7 +135,11 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CSVIO.cpp" />
     <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CSVIO.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
